# pyindi-client

./: README.md  pyindi.msp
metasip/: pyindi-configure.py
metasip/test/: testsignal.py
metasip/test-qt/: PyQtIndi.py  blobgui.py  defaultviewer.py  drivermanager.ui  indihostconfgui.py  modeltest.py  pyqtindi.ui  pyqtindigui.py  treemodelIndi.py
metasip/test-qt/resources/: icons.qrc
metasip/test-qt/viewers/: wandtest.py
sip/: PyIndimod.sip  baseclient.sip  basedevice.sip  indiapi.sip  indibase.sip  indicom.sip  indidevapi.sip  indiproperty.sip
swig-indi/swig-indi-nodejs/: CMakeLists.txt  baseclientimpl.cpp  baseclientimpl.h  binding.gyp.cmake  indiclientnodejs-wrap.i  indiclientnodejs.i  package.json.cmake  test-indiclientnodejs.js
swig-indi/swig-indi-php/: CMakeLists.txt  indiclientphp.i  test-indi.php
swig-indi/swig-indi-python/: CMakeLists.txt  indiclientpython.i  indidriverpython.i  python_simulator_ccd.py  test-indidriver.py  tutorial_four_sk.xml
swig-indi/swig-indi-tcl/: CMakeLists.txt  baseclient.i  tclclient.cpp  tclclient.h  tclclient.i  test.tcl
test/: test-indiclient.py
test-qt/: blob.ui  drivermanagergui.py  icons_rc.py
test-qt/viewers/: defaultviewer.py  wandimagemagick.py
tools/freecad/equatorial-mount/: EqMount.py  Render.py  Simulator-orig.py  Simulator.py  SimulatorGui.py  Telescope.py
